# url-shortener

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yaml  gunicorn_config.py  locustfile.py  pyproject.toml
shortener/: __init__.py  settings.py  shortener.py  url_id.py
shortener/api/: app.py  dependencies.py
shortener/api/routers/: health.py  redirect.py  shorten.py
shortener/api/schemas/: health.py
shortener/clients/: s3.py
test/unit/: test_url_id.py
