[tool.poetry]
name = "shortener"
version = "0.1.0"
description = "Concurrent URL shortener"
authors = ["Jonas Petrovsky <jontesek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
structlog = "^21.1.0"
aioredis = "^1.3.1"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
sentry-sdk = "^1.0.0"
ddtrace = "^0.47.0"
ddtrace-asgi = "^0.3.0"
boto3 = "^1.17.58"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
